Extract out the main algorithm to its own repository

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,14 +1,12 @@
 
 linux:
-	gcc -O2 -std=gnu99 -fPIC -Wall -I/usr/local/include/ -s -shared -o \
-		libtimsort.so libtimsort.c -L/usr/local/lib/ -llua 
+	gcc -O2 -std=gnu99 -fPIC -Wall -I/usr/local/include/ -s -shared -o libluatimsort.so libluatimsort.c -L/usr/local/lib/ -llua -ltimsort
 
 macos:
-	gcc -O2 -std=gnu99 -fPIC -Wall -I/usr/local/include/ -dynamiclib -o \
-		libtimsort.so libtimsort.c -L/usr/local/lib/ -llua 
+	gcc -O2 -std=gnu99 -fPIC -Wall -I/usr/local/include/ -dynamiclib -o libluatimsort.so libluatimsort.c -L/usr/local/lib/ -llua -ltimsort
 
 install:
 	mkdir -p /usr/local/lib/lua/5.4/	# just for ensuring that the dest dir exists
 	mkdir -p /usr/local/share/lua/5.4/	# just for ensuring that the dest dir exists
-	mv libtimsort.so /usr/local/lib/lua/5.4/
+	mv libluatimsort.so /usr/local/lib/lua/5.4/
 	cp timsort.lua /usr/local/share/lua/5.4/
